// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeReactConnect(React, store, mappingObj) --- no connection --- 1`] = `
<div
  className="test-component"
>
  <h1>
    Hello World
  </h1>
  no text yet
</div>
`;

exports[`makeReactConnect(React, store, mappingObj) renders children 1`] = `
<div
  className="test-component-with-children"
>
  <h1>
    Children
  </h1>
  <p>
    child 2
  </p>
  Test
</div>
`;

exports[`makeReactConnect(React, store, mappingObj) rerenders connected component when dispatch 1`] = `
<div
  className="test-component"
>
  <h1>
    Hello World
  </h1>
  refreshed text!
</div>
`;

exports[`makeReactConnect(React, store, mappingObj) returns connected component 1`] = `
<div
  className="test-component"
>
  <h1>
    Hello World
  </h1>
  HelloWorld!
</div>
`;
